force-app/main/default/objects/Game__c/Game__c.object-meta.xml
<CustomObject>
    <label>Game</label>
    <pluralLabel>Games</pluralLabel>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
        
    </nameField>
    <sharingModel>Read</sharingModel>
    <description>Stores available games on the GameHub platform.</description>
</CustomObject>