force-app/main/default/objects/Game__c/fields/Game_Category__c.field-meta.xml
<CustomField>
    <fullName>Game_Category__c</fullName>
    <label>Game Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>FPS</fullName><default>false</default><label>FPS</label></value>
            <value><fullName>RPG</fullName><default>false</default><label>RPG</label></value>
            <value><fullName>Strategy</fullName><default>false</default><label>Strategy</label></value>
            <value><fullName>Sports</fullName><default>false</default><label>Sports</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>