force-app/main/default/objects/Game__c/fields/Game_Mode__c.field-meta.xml
<CustomField>
    <fullName>Game_Mode__c</fullName>
    <label>Game Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single</fullName><default>false</default><label>Single</label></value>
            <value><fullName>Multiplayer</fullName><default>false</default><label>Multiplayer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>