force-app/main/default/objects/Game__c/fields/Max_Players__c.field-meta.xml
<CustomField>
    <fullName>Max_Players__c</fullName>
    <label>Max Players</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>